# Koptyrka

./: CMakeLists.txt  README.md  main.cpp
include/: nodes.hpp  package.hpp  storage_types.hpp  types.hpp
source/: main.cpp  package.cpp  storage_types.cpp
src/: helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
